--- a/eat.Rmd
+++ b/eat.Rmd
@@ -14,6 +14,10 @@ date: "`r Sys.Date()`"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+# Introduction
+
+Is there a relationship between races and how frequently they go out to eat
+
 ## There were two years in which the General Social Survey asked about the frequency of eating out.
 ### Find those years and for the first year the question was asked download that years data in a stata format - its name will be "GSSxxxx.dta" where the xxxx is replaced by the year.  For example if the year was 1983 its name would be GSS1983.dta. Your assignment is to download the GSS yearly dataset for the first year the question was asked and then  write up the answer to the question by editing the  code block in line 31 to eval=TRUE and finish the job. 
 
@@ -28,17 +32,50 @@ require(tigerstats)
 require(knitr)
 require(foreign)
 ```
-```{r, eval=FALSE}
-GSS <-read.dta(file="GSS1996.dta")
+```{r, eval=TRUE}
+#race = c("white", "black","other")
+GSS <-readstata13::read.dta13(file="GSS1996.dta")
 GSS <- droplevels(GSS)
 mydata <- select(GSS,race,age,eatout)
 mydata <- na.omit(mydata)
 ```
 
+# Method
+
+The response variable (how frequently different races go out to eat) is numerical ; the input variable is categorical. We have a Num ~ Cat
+
+# Results
+
+## Descriptive Results
+
+### Numerical Descriptive Results
+
+```{r}
+table1 <- xtabs(~race + eatout, data=mydata)
+rowPerc(table1)
+colPerc(table1)
+```
 
 
+### Graphical Descriptive Results
+
+```{r}
+barchartGC(~race + eatout,data=mydata)
+barchartGC(~race + eatout,data=mydata,type="percent")
+```
+
+The bar chart suggests that there is a difference in the percentage of races and eating out 
+
+### Inferential Results
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
 
 
+# Discussion and Conclusion
 
-
+Based on the results, we reject the null hypothesis because the p-value is so small, 0.0008179, concluding that the there is a difference in the frequency of eating out based on race.
 
